# WKDiscordBot

./: .gitignore  Cargo.toml  README.md
src/: command.rs  discord.rs  discord_handler.rs  error.rs  main.rs
src/base.rs/: command.rs  discord.rs  error.rs  memory.rs  service.rs
src/games.rs/: liers_dice.rs
src/services.rs/: dice.rs  info.rs  liars_dice.rs  liers_dice.rs
