[package]
name = "wk_discord_bot"
version = "0.1.0"
authors = ["William Kraft <william.z.kraft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread"]}
serenity =  { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10.10"}
futures = "0.3.21"